--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div class="card-box">
-        <img src="img/image-qr-code.png" alt="QR code with link to front-end mentor" class="card-box__header">
+    <main class="card-box">
+        <img src="../img/image-qr-code.png" alt="QR code with link to front-end mentor" class="card-box__header">
         <div class="card-box__text">
-            <p class="title">Improve your front-end skills by building projects</p>
+            <h1 class="title">Improve your front-end skills by building projects</h1>
             <p class="info">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
             </p>
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
